updated readme and final report.

--- a/telco_classification_final_report.ipynb
+++ b/telco_classification_final_report.ipynb
@@ -446,8 +446,11 @@
     "2. What are significant people attributes associated with churn?\n",
     "\n",
     "3. What are significant service attributes associated with churn?\n",
+    "\n",
     "4. Do people attributes outweigh service attributes?\n",
+    "\n",
     "5. Is the average churn from customers using Manual Payment greater than the average churn of all customers?\n",
+    "\n",
     "6. For customers on month-to-month contract and using manual payment, is churn greater when using paperless billing or when having no dependents?\n",
     "\n",
     "### Question 1\n",
@@ -857,12 +860,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e8839b6",
+   "id": "6244fa87",
    "metadata": {},
    "source": [
     "## Predicting Churn\n",
     "\n",
-    "Churn is a yes or no value so we will use classification machine learning algorithms to fit to our taining data and then evaluate against our validate data. We will pick the best model using accuracy and precision because predicting a churn and getting it wrong is still favorable.\n",
+    "Churn is a yes or no value so we will use classification machine learning algorithms to fit to our taining data and then evaluate against our validate data. We will pick the best model using **accuracy** and **recall** because predicting a non-churn and getting it wrong is favorable.\n",
     "    \n",
     "## Prep Data for Modeling"
    ]
@@ -930,12 +933,10 @@
     "Baseline performed at 73% accuracy\n",
     "\n",
     "## Develop 3 Models\n",
+    "- Selected models were are a Decision Tree, Random Forest, and K-Nearest Neighbor\n",
+    "- Models used the same features but differed in hyperparameters which were selected as best in a range\n",
     "\n",
-    "- Top 3 models were are a Decision Tree, Random Forest, and KNN\n",
-    "- Models differed in hyperparameters which were selected as best in a range\n",
-    "- K-Nearest Neighbor (Model 3) performed the best at 84% accuracy and 73% precision \n",
-    "\n",
-    "## Fit and Evaluate Models on Train Data\n",
+    "## Fit and Evaluate Train Data on Models\n",
     "### Model 1: Decision Tree"
    ]
   },
@@ -1078,7 +1079,7 @@
    "source": [
     "### Evaluate:\n",
     "- Accuracy: 80%\n",
-    "- Precision: 67%\n",
+    "- Recall: 47%\n",
     "- Predicted 732 churns of which 241 were false \n",
     "\n",
     "### Model 2: Random Forest"
@@ -1207,7 +1208,7 @@
    "source": [
     "### Evaluate:\n",
     "- Accuracy: 80%\n",
-    "- Precision: 69%\n",
+    "- Recall: 43%\n",
     "- Predicted 643 churns of which 197 were false\n",
     "\n",
     "### Model 3: K-Nearest Neighbor"
@@ -1336,15 +1337,16 @@
    "source": [
     "### Evaluate:\n",
     "- Accuracy: 84%\n",
-    "- Precision: 73%\n",
+    "- Recall: 62%\n",
     "- Predicted 888 of which 241 were false\n",
     "\n",
-    "## Evaluate Models on Validate Data\n",
+    "### Evaluation Summary:\n",
+    "\n",
+    "- K-Nearest Neighbor (Model 3) performed the best at 84% accuracy and 62% Recall. \n",
     "- Models do not appear to be overfit\n",
-    "- Random Forest peformed the best with 80% accuracy and 70% precision\n",
-    "- Going forward with Random Forest because accuracy is the same between Train and Validate\n",
+    "- Going forward with all models as there wasn't much difference in accuracy between them\n",
     "\n",
-    "\n",
+    "## Evaluate Validate Data on Models\n",
     "### Model 1: Decision Tree"
    ]
   },
@@ -1464,7 +1466,7 @@
    "source": [
     "### Evaluate:\n",
     "- Accuracy: 79%\n",
-    "- Precision: 62%\n",
+    "- Recall: 48%\n",
     "- Predicted 348 churns of which 131 were false\n",
     "\n",
     "### Model 2: Random Forest"
@@ -1586,7 +1588,7 @@
    "source": [
     "### Evaluate:\n",
     "- Accuracy: 80%\n",
-    "- Precision: 70%\n",
+    "- Recall: 45%\n",
     "- Predicted 290 of which 88 were false\n",
     "\n",
     "### Model 3: K-Nearest Neighbor"
@@ -1708,26 +1710,19 @@
    "source": [
     "### Evaluate:\n",
     "- Accuracy: 78%\n",
-    "- Precision: 59%\n",
+    "- Recall: 53%\n",
     "- Predicted 410 churns of which 170 were false\n",
     "\n",
-    "### Summary\n",
-    "Random Forest (Model 2) did the best on the validate sample and shows the least overfit compared to K-Nearest Neighbor (Model 3). Going forward with Random Forest."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6123817d",
-   "metadata": {},
-   "source": [
-    "## Evaluate Model 2 on Test Data\n",
+    "### Evaluation Summary:\n",
+    "Random Forest (Model 2) did slightly better on the validate sample with 80% accuracy and 45% recall. It is also less overfit than K-Nearest Neighbor (Model 3). Going forward with Random Forest.\n",
     "\n",
+    "## Evaluate Test Data on Model 2\n",
     "### Model 2: Random Forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 70,
    "id": "15e1cb24",
    "metadata": {},
    "outputs": [],
@@ -1841,7 +1836,7 @@
    "source": [
     "### Evaluate\n",
     "- Accuracy: 80%\n",
-    "- Precision: 68%\n",
+    "- Recall: 44%\n",
     "- Predicted 243 of which 77 are false\n",
     "\n",
     "### This model is expected to perform with 80% accuracy on unseen data assuming there are no major changes in our data source. "
